Added beginnings of site styling

--- a/index.html
+++ b/index.html
@@ -1,12 +1,32 @@
 <!DOCTYPE html>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+
 <html lang="en">
 <head>
     <title>Beachsoft</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:ital,wght@0,400;1,200&display=swap" rel="stylesheet">
+    
     <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
+<div id="title">
+    Beachsoft
+</div>
+<div id="studio-info">
+    a game studio in nyc
+</div>
+<div id="game-names-title">
+    <h2>our games</h2>
+</div>
+<div id="game-info">
+    <h3>Godthåb</h3>
+    <i>(wip)</i>
+    <p>an adventure game about Greenland and memory. put a better description here. It should be longer and fill up more space. La da da</p>
+</div>
 <div>
-    <h1>under construction...</h1>
+    <p><a href="mailto:admin@beachsoft.us">contact</a></p>
 </div>
 </body>
 </html>
