Added svg and fullscreened it

--- a/index.html
+++ b/index.html
@@ -11,22 +11,29 @@
     <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
-<div id="title">
-    Beachsoft
+<div class="fullscreen">
+    <div id="logo">
+        <img src="./logo_inv.svg" width="800" alt="beachsoft logo" />
+    </div>
+<!--    <div id="studio-info">-->
+<!--        a game studio in nyc-->
+<!--    </div>-->
 </div>
-<div id="studio-info">
-    a game studio in nyc
-</div>
-<div id="game-names-title">
-    <h2>our games</h2>
-</div>
-<div id="game-info">
-    <h3>Godthåb</h3>
-    <i>(wip)</i>
-    <p>an adventure game about Greenland and memory. put a better description here. It should be longer and fill up more space. La da da</p>
-</div>
-<div>
-    <p><a href="mailto:admin@beachsoft.us">contact</a></p>
-</div>
+
+
+
+
+
+<!--<div id="game-names-title">-->
+<!--    <h2>our games</h2>-->
+<!--</div>-->
+<!--<div id="game-info">-->
+<!--    <h3>Godthåb</h3>-->
+<!--    <i>(wip)</i>-->
+<!--    <p>an adventure game about Greenland and memory. put a better description here. It should be longer and fill up more space. La da da</p>-->
+<!--</div>-->
+<!--<div>-->
+<!--    <p><a href="mailto:admin@beachsoft.us">contact</a></p>-->
+<!--</div>-->
 </body>
 </html>
