added second page and game info

--- a/index.html
+++ b/index.html
@@ -13,27 +13,32 @@
 <body>
 <div class="fullscreen">
     <div id="logo">
-        <img src="./logo_inv.svg" width="800" alt="beachsoft logo" />
+        <img src="./img/logo_inv.svg" width="800" alt="beachsoft logo" />
     </div>
-<!--    <div id="studio-info">-->
-<!--        a game studio in nyc-->
-<!--    </div>-->
+</div>
+<div class="fullscreen">
+    <div>
+        <h1><i>a videogame studio in nyc</i></h1>
+    </div>
+    <div>
+        <h1>our games</h1>
+        <hr />
+        <h2>Godthåb</h2>
+        <i>(wip)</i>
+        <h3>
+            <i>explore the tundra, rediscover your past, and try to remember... or forget.</i>
+        </h3>
+        <h3>
+            <i>Godthåb is a pint-sized open-world adventure game, set in 1800s Greenland, about time, regret, and memory.</i>
+        </h3>
+        <h3>
+            <i>We're hoping to launch it in mid-2024.</i>
+        </h3>
+    </div>
+    <div>
+        <h3><a href="mailto:admin@beachsoft.us">contact us</a></h3>
+    </div>
 </div>
 
-
-
-
-
-<!--<div id="game-names-title">-->
-<!--    <h2>our games</h2>-->
-<!--</div>-->
-<!--<div id="game-info">-->
-<!--    <h3>Godthåb</h3>-->
-<!--    <i>(wip)</i>-->
-<!--    <p>an adventure game about Greenland and memory. put a better description here. It should be longer and fill up more space. La da da</p>-->
-<!--</div>-->
-<!--<div>-->
-<!--    <p><a href="mailto:admin@beachsoft.us">contact</a></p>-->
-<!--</div>-->
 </body>
 </html>
