Fixed bad wording

--- a/index.html
+++ b/index.html
@@ -24,15 +24,15 @@
         <h1>our games</h1>
         <hr />
         <h2>Godthåb</h2>
-        <i>(wip)</i>
+        <i>(current wip)</i>
         <h3>
-            <i>explore the tundra, rediscover your past, and try to remember... or forget.</i>
+            <i>explore the arctic tundra, investigate your own mysterious past, and try to remember... or forget.</i>
         </h3>
         <h3>
-            <i>Godthåb is a pint-sized open-world adventure game, set in 1800s Greenland, about time, regret, and memory.</i>
+            <i>Godthåb is a pint-sized open-world adventure game set in Greenland in the late 1800s.</i>
         </h3>
         <h3>
-            <i>We're hoping to launch it in mid-2024.</i>
+            <i>its estimated launch date is mid-2024, but we'll have much more to share before the end of 2023.</i>
         </h3>
     </div>
     <div>
