--- a/index.html
+++ b/index.html
@@ -23,16 +23,16 @@
     <div>
         <h1>our games</h1>
         <hr />
-        <h2>Godthåb</h2>
+        <h2>Grønland</h2>
         <i>(current wip)</i>
         <h3>
             <i>explore the arctic tundra, investigate your own mysterious past, and try to remember... or forget.</i>
         </h3>
         <h3>
-            <i>Godthåb is a pint-sized open-world adventure game set in Greenland in the late 1800s.</i>
+            <i>Grønland is a pint-sized open-world adventure game set in Greenland in the late 1800s.</i>
         </h3>
         <h3>
-            <i>its estimated launch date is mid-2024, but we'll have much more to share before the end of 2023.</i>
+            <i>its estimated launch date is H1 2024.</i>
         </h3>
     </div>
     <div>
