Updated site styling to include steam links and youtube video.

--- a/index.html
+++ b/index.html
@@ -7,38 +7,33 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:ital,wght@0,400;1,200&display=swap" rel="stylesheet">
-    
+
     <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
 <div class="fullscreen">
-    <div id="logo">
+    <div>
         <img src="./img/logo_inv.svg" width="800" alt="beachsoft logo" />
     </div>
 </div>
 <div class="fullscreen">
-    <div>
-        <h1><i>a videogame studio in nyc</i></h1>
-    </div>
-    <div>
-        <h1>our games</h1>
-        <hr />
-        <h2>Grønland</h2>
-        <i>(current wip)</i>
-        <h3>
-            <i>explore the arctic tundra, investigate your own mysterious past, and try to remember... or forget.</i>
-        </h3>
-        <h3>
-            <i>Grønland is a pint-sized open-world adventure game set in Greenland in the late 1800s.</i>
-        </h3>
-        <h3>
-            <i>its estimated launch date is H1 2024.</i>
-        </h3>
-    </div>
-    <div>
-        <h3><a href="mailto:admin@beachsoft.us">contact us</a></h3>
+    <h1>our games</h1>
+    <div id="gronland-logo">
+        <a href="https://store.steampowered.com/app/2636310/Grnland/" target="_blank"><img src="./img/gronland.png" alt="gronland logo"></a>
     </div>
 </div>
-
+<div class="fullscreen">
+    <div>
+        <iframe width="800" height="450" src="https://www.youtube.com/embed/E1-kRKM8pwg?si=LulYH_MwvDS1wm0W" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        <a href="https://store.steampowered.com/app/2636310/Grnland/" target="_blank"><img id="steam-logo" src="./img/steam_logo_white_w_text.svg" alt="steam logo"></a>
+    </div>
+    <div>
+        <p><i>Explore the frozen North, investigate your past, and try to remember... or forget.</i></p>
+        <p><a href="https://store.steampowered.com/app/2636310/Grnland/" target="_blank"><strong>Grønland</strong></a> <i>is a mysterious adventure game set in the lower Arctic of the late 19th century.</i></p>
+    </div>
+    <div id="mail-icon">
+        <a href="mailto:inquiries@beachsoft.us"><img src="./img/email_icon.svg" width="100"/></a>
+    </div>
+</div>
 </body>
 </html>
