--- a/gronland-presskit.html
+++ b/gronland-presskit.html
@@ -7,29 +7,97 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:ital,wght@0,400;1,200&display=swap" rel="stylesheet">
-
+    <link rel="icon" type="image/x-icon" href="./img/favicon.png">
     <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
-<div class="game">
+<div class="presskit">
     <div id="gronland-logo">
         <a href="https://store.steampowered.com/app/2636310/Grnland/" target="_blank"><img src="./img/gronland_logo.png" alt="gronland logo"></a>
     </div>
+
+    <h2>Description</h2>
+    <div class="quote">
+        <i><p>
+            It's 1899, and the frozen North is one of the Western world's last remaining frontiers.
+        </p>
+            <p>
+                Explorers come from across the globe, scheming and dreaming of planting their flag at the Pole.
+            </p>
+            <p>Every summer, a half dozen countries send massive expeditions, continuing a centuries-old search for the fabled Northwest Passage.
+            </p>
+            <p>Christian missionaries have begun to settle and proselytize the faith, inflaming tensions with the dozens of local Inuit nations. It seems conflict is inevitable...
+            </p>
+            <p>
+                But why, exactly, are <strong>you</strong> here?
+            </p>
+            <p>
+                Well, that's up to you to remember... or forget.
+            </p>
+            <p>
+                Grønland is a mysterious adventure game in a pint-sized open world teeming with allies, adversaries, secrets, and treasures.
+            </p></i>
+    </div>
+
+    <div>
+        <h2>Information</h2>
+        <table>
+            <tr>
+                <td><strong>Developer</strong></td>
+                <td>beachsoft</td>
+            </tr>
+            <tr>
+                <td><strong>Publisher</strong></td>
+                <td>beachsoft</td>
+            </tr>
+            <tr>
+                <td><strong>Platform</strong></td>
+                <td>PC, Mac</td>
+            </tr>
+            <tr>
+                <td><strong>Release Date</strong></td>
+                <td>March 2024</td>
+            </tr>
+            <tr>
+                <td><strong>Steam</strong></td>
+                <td><a href="https://store.steampowered.com/app/2636310/Grnland/">Link</a></td>
+            </tr>
+            <tr>
+                <td><strong>Social Media</strong></td>
+                <td><a href="https://www.instagram.com/beachsoftware/">Instagram</a>, <a href="https://bsky.app/profile/beachsoft.bsky.social">Bluesky</a></td>
+            </tr>
+            <tr>
+                <td><strong>Email</strong></td>
+                <td>inquiries -at- this domain</td>
+            </tr>
+        </table>
+    </div>
+
+    <h2>Screenshots</h2>
+    <div class="photobox">
+        <img class="sixforty" src="./img/gronland_presskit_ss_1.png" alt="">
+        <img class="sixforty" src="./img/gronland_presskit_ss_2.png">
+        <img class="sixforty" src="./img/gronland_presskit_ss_3.png">
+        <img class="sixforty" src="./img/gronland_presskit_ss_4.png">
+        <img class="sixforty" src="./img/gronland_presskit_ss_5.png">
+        <img class="sixforty" src="./img/gronland_presskit_ss_6.png">
+        <img class="sixforty" src="./img/gronland_presskit_ss_7.png">
+        <img class="sixforty" src="./img/gronland_presskit_ss_8.png">
+        <img class="sixforty" src="./img/gronland_presskit_ss_9.png">
+        <img class="sixforty" src="./img/gronland_presskit_ss_10.png">
+    </div>
+    <h2>
+        Marketing Images
+    </h2>
+        <div class="photobox">
+            <img class="sixforty" src="./img/gronland_logo.png">
+            <img class="sixforty" src="./img/iceberg.png">
+        </div>
+    <h2>Trailer</h2>
     <div>
         <iframe width="800" height="450" src="https://www.youtube.com/embed/E1-kRKM8pwg?si=LulYH_MwvDS1wm0W" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
     </div>
-    <div>
-        <p>
-            <i>A mysterious adventure game set in the lower Arctic of the late 19th century.</i>
-        </p>
-        <p>
-            <i>Explore the frozen North, investigate your past, and try to remember... or forget.</i>
-        </p>
-        <p>Coming <strong>March 2024</strong>.</p>
-    </div>
-    <div>
-        <p><a href="https://store.steampowered.com/app/2636310/Grnland/" target="_blank"><img id="steam-logo" src="./img/steam_logo_white_w_text.svg" alt="steam logo"></a></p>
-    </div>
+
 </div>
 </body>
 </html>
