--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:ital,wght@0,400;1,200&display=swap" rel="stylesheet">
-
+    <link rel="icon" type="image/x-icon" href="./img/favicon.png">
     <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
@@ -27,19 +27,16 @@
     </div>
     <div>
         <p>
-            <i>A mysterious adventure game set in the lower Arctic of the late 19th century.</i>
+            <i>A peculiar adventure game set in the lower Arctic of the late 19th century.</i>
         </p>
         <p>
-            <i>Explore the frozen North, investigate your past, and try to remember... or forget.</i>
+            <i>Explore the frozen North, investigate your mysterious past, and try to remember... or forget.</i>
         </p>
         <p>Coming <strong>March 2024</strong>.</p>
-        </div>
+    </div>
     <div>
         <p><a href="./gronland-presskit.html">Presskit</a></p>
         <p><a href="https://store.steampowered.com/app/2636310/Grnland/" target="_blank"><img id="steam-logo" src="./img/steam_logo_white_w_text.svg" alt="steam logo"></a></p>
-    </div>
-    <div id="mail-icon">
-        <a href="mailto:inquiries@beachsoft.us"><img src="./img/email_icon.svg" width="100"/></a>
     </div>
 </div>
 
