Adjusted home page a bit more

--- a/index.html
+++ b/index.html
@@ -26,17 +26,37 @@
         <iframe width="800" height="450" src="https://www.youtube.com/embed/E1-kRKM8pwg?si=LulYH_MwvDS1wm0W" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
     </div>
     <div>
-        <p>
-            <i>A peculiar adventure game set in the lower Arctic of the late 19th century.</i>
-        </p>
-        <p>
-            <i>Explore the frozen North, investigate your mysterious past, and try to remember... or forget.</i>
-        </p>
-        <p>Coming <strong>March 2024</strong>.</p>
+        <div class="quote">
+            <p>
+                <i>It's 1899, and the frozen North is one of the Western world's last remaining frontiers.</i>
+            </p>
+            <p>
+                <i>Explorers come from across the globe, scheming and dreaming of planting their flag at the Pole.</i>
+            </p>
+            <p>
+                <i>Every summer, a half dozen countries send massive expeditions, continuing a centuries-old search for the fabled Northwest Passage.</i>
+            </p>
+            <p>
+                <i>Christian missionaries have begun to settle and proselytize the faith, inflaming tensions with the dozens of local Inuit nations. It seems conflict is inevitable...</i>
+            </p>
+            <p>
+                <i>But why, exactly, are <strong>you</strong> here?</i>
+            </p>
+            <p>
+                <i>Well, that's up to you to remember... or forget.</i>
+            </p>
+        </div>
+        <div>
+            <p>
+                Grønland is a mysterious adventure game in a pint-sized open world teeming with allies, adversaries, secrets, and treasures.</i>
+            </p>
+        </div>
+        <p>Coming <strong>March 2024</strong>! Wishlist on </p>
+        <a href="https://store.steampowered.com/app/2636310/Grnland/" target="_blank"><img id="steam-logo" src="./img/steam_logo_white_w_text.svg" alt="steam logo"></a>
+
     </div>
     <div>
         <p><a href="./gronland-presskit.html">Presskit</a></p>
-        <p><a href="https://store.steampowered.com/app/2636310/Grnland/" target="_blank"><img id="steam-logo" src="./img/steam_logo_white_w_text.svg" alt="steam logo"></a></p>
     </div>
 </div>
 
