Slightly changed platform

--- a/gronland-presskit.html
+++ b/gronland-presskit.html
@@ -52,7 +52,7 @@
             </tr>
             <tr>
                 <td><strong>Platform</strong></td>
-                <td>PC, Mac</td>
+                <td>PC & Mac via Steam</td>
             </tr>
             <tr>
                 <td><strong>Release Date</strong></td>
