Changed steam logo to a widget

--- a/gronland-presskit.html
+++ b/gronland-presskit.html
@@ -89,10 +89,14 @@
     <h2>
         Marketing Images
     </h2>
-        <div class="photobox">
-            <img class="sixforty" src="./img/gronland_logo.png">
-            <img class="sixforty" src="./img/iceberg.png">
-        </div>
+    <div class="photobox">
+        <img class="sixforty" src="./img/gronland_logo.png">
+        <img class="sixforty" src="./img/iceberg.png">
+    </div>
+    <h2>Steam Widget</h2>
+    <div>
+    <iframe src="https://store.steampowered.com/widget/2636310/" frameborder="0" width="800" height="190"></iframe>
+    </div>
     <h2>Trailer</h2>
     <div>
         <iframe width="800" height="450" src="https://www.youtube.com/embed/E1-kRKM8pwg?si=LulYH_MwvDS1wm0W" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
