--- a/index.html
+++ b/index.html
@@ -48,12 +48,15 @@
         </div>
         <div>
             <p>
-                Grønland is a mysterious adventure game in a pint-sized open world teeming with allies, adversaries, secrets, and treasures.</i>
+                <strong>Grønland</strong> is a mysterious adventure game in a pint-sized open world teeming with allies, adversaries, secrets, and treasures.
+            </p>
+            <p>
+                It's currently planned to be released in <strong>March 2024</strong>. If you're interested, please wishlist it!
             </p>
         </div>
-        <p>Coming <strong>March 2024</strong>! Wishlist on </p>
-        <a href="https://store.steampowered.com/app/2636310/Grnland/" target="_blank"><img id="steam-logo" src="./img/steam_logo_white_w_text.svg" alt="steam logo"></a>
-
+    </div>
+    <div>
+        <iframe src="https://store.steampowered.com/widget/2636310/" frameborder="0" width="800" height="190"></iframe>
     </div>
     <div>
         <p><a href="./gronland-presskit.html">Presskit</a></p>
