Added a "download all" button

--- a/gronland-presskit.html
+++ b/gronland-presskit.html
@@ -18,25 +18,27 @@
 
     <h2>Description</h2>
     <div class="quote">
-        <i><p>
-            It's 1899, and the frozen North is one of the Western world's last remaining frontiers.
+        <p>
+            <i>It's 1899, and the frozen North is one of the Western world's last remaining frontiers.</i>
         </p>
-            <p>
-                Explorers come from across the globe, scheming and dreaming of planting their flag at the Pole.
-            </p>
-            <p>Every summer, a half dozen countries send massive expeditions, continuing a centuries-old search for the fabled Northwest Passage.
-            </p>
-            <p>Christian missionaries have begun to settle and proselytize the faith, inflaming tensions with the dozens of local Inuit nations. It seems conflict is inevitable...
-            </p>
-            <p>
-                But why, exactly, are <strong>you</strong> here?
-            </p>
-            <p>
-                Well, that's up to you to remember... or forget.
-            </p>
-            <p>
-                Grønland is a mysterious adventure game in a pint-sized open world teeming with allies, adversaries, secrets, and treasures.
-            </p></i>
+        <p>
+            <i>Explorers come from across the globe, scheming and dreaming of planting their flag at the Pole.</i>
+        </p>
+        <p>
+            <i>Every summer, a half dozen countries send massive expeditions, continuing a centuries-old search for the fabled Northwest Passage.</i>
+        </p>
+        <p>
+            <i>Christian missionaries have begun to settle and proselytize the faith, inflaming tensions with the dozens of local Inuit nations. It seems conflict is inevitable...</i>
+        </p>
+        <p>
+            <i>But why, exactly, are <strong>you</strong> here?</i>
+        </p>
+        <p>
+            <i>Well, that's up to you to remember... or forget.</i>
+        </p>
+        <p>
+            <i><strong>Grønland</strong> is a mysterious adventure game in a pint-sized open world teeming with allies, adversaries, secrets, and treasures.</i>
+        </p>
     </div>
 
     <div>
@@ -74,6 +76,7 @@
     </div>
 
     <h2>Screenshots</h2>
+    <p><a href="./img/gronland_presskit_images.zip">(Download all as .zip)</a></p>
     <div class="photobox">
         <img class="sixforty" src="./img/gronland_presskit_ss_1.png" alt="">
         <img class="sixforty" src="./img/gronland_presskit_ss_2.png">
@@ -91,7 +94,7 @@
     </h2>
     <div class="photobox">
         <img class="sixforty" src="./img/gronland_logo.png">
-        <img class="sixforty" src="./img/iceberg.png">
+        <img class="sixforty" src="./img/gronland_presskit_iceberg.png">
     </div>
     <h2>Steam Widget</h2>
     <div>
