Added horiz capsule to presskit

--- a/gronland-presskit.html
+++ b/gronland-presskit.html
@@ -95,6 +95,7 @@
     <div class="photobox">
         <img class="sixforty" src="./img/gronland_logo.png">
         <img class="sixforty" src="./img/gronland_presskit_iceberg.png">
+        <img class="sixforty" src="./img/gronland_capsule_horiz.jpg">
     </div>
     <h2>Steam Widget</h2>
     <div>
