changed in dev to games on frontpage

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <img src="./img/logo_inv.svg" width="800" alt="beachsoft logo" />
         </div>
     </div>
-    <h1>in development</h1>
+    <h1>games</h1>
     <hr />
     <div class="game">
         <div id="gronland-logo">
