--- a/index.html
+++ b/index.html
@@ -13,59 +13,95 @@
 </head>
 
 <body>
-    <div class="title">
-        <div>
-            <img src="./img/logo_inv.svg" width="800" alt="beachsoft logo" />
+    <div class="frontpage">
+        <div class="title">
+            <div>
+                <img src="./img/logo_inv.svg" width="800" alt="beachsoft logo" />
+            </div>
         </div>
-    </div>
-    <h1>games</h1>
-    <hr />
-    <div class="game">
-        <div id="gronland-logo">
-            <a href="https://store.steampowered.com/app/2636310/Grnland/" target="_blank"><img
-                    src="./img/gronland_logo.png" alt="gronland logo"></a>
-        </div>
-        <div>
-            <iframe width="800" height="450" src="https://www.youtube.com/embed/E1-kRKM8pwg?si=LulYH_MwvDS1wm0W"
-                title="YouTube video player" frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                allowfullscreen></iframe>
-        </div>
-        <div>
-            <div class="quote">
+        <div class="about">
+            <div>
+                <h1>about</h1>
+                <hr />
+                founded in 2023, beachsoft is a videogame studio in nyc.
                 <p>
-                    <i>It's 1899, and the frozen North is one of the Western world's last remaining frontiers.</i>
-                </p>
-                <p>
-                    <i>Explorers come from across the globe, scheming and dreaming of planting their flag at the
-                        Pole.</i>
-                </p>
-                <p>
-                    <i>Every summer, a half dozen countries send massive expeditions, continuing a centuries-old search
-                        for the fabled Northwest Passage.</i>
-                </p>
-                <p>
-                    <i>Christian missionaries have begun to settle and proselytize the faith, inflaming tensions with
-                        the dozens of local Inuit nations. It seems conflict is inevitable...</i>
-                </p>
-                <p>
-                    <i>But why, exactly, are <strong>you</strong> here?</i>
-                </p>
-                <p>
-                    <i>Well, that's up to you to remember... or forget.</i>
+                    currently it is headquartered in <a href="https://gumbonyc.org/">GUMBO</a>, a game developer co-op in brooklyn, ny.
                 </p>
             </div>
         </div>
-        <br />
         <div>
-            <iframe src="https://store.steampowered.com/widget/2636310/" frameborder="0" width="800"
-                height="190"></iframe>
+            <h1>social</h1>
+            <hr />
+            <div class="social">
+                <div>
+                    <table>
+                        <tr>
+                            <td><strong>Instagram</strong></td>
+                            <td><a href="https://www.instagram.com/beachsoftware/">beachsoftware</a></td>
+                        </tr>
+                        <tr>
+                            <td><strong>Bluesky</strong></td>
+                            <td><a href="https://bsky.app/profile/beachsoft.bsky.social">beachsoft.bsky.social</a></td>
+                        </tr>
+                        <tr>
+                            <td><strong>Email</strong></td>
+                            <td>inquiries -at- this domain</td>
+                        </tr>
+                    </table>
+                </div>
+            
+            </div>
         </div>
-        <div>
-            <p><a href="./gronland-presskit.html">Presskit</a></p>
+        <div class="games-list">
+            <h1>games</h1>
+            <hr />
+            <div class="game">
+                <div id="gronland-logo">
+                    <a href="https://store.steampowered.com/app/2636310/Grnland/" target="_blank"><img
+                            src="./img/gronland_logo.png" alt="gronland logo"></a>
+                </div>
+                <div>
+                    <iframe width="800" height="450" src="https://www.youtube.com/embed/E1-kRKM8pwg?si=LulYH_MwvDS1wm0W"
+                        title="YouTube video player" frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                        allowfullscreen></iframe>
+                </div>
+                <div>
+                    <div class="quote">
+                        <p>
+                            <i>It's 1899, and the frozen North is one of the Western world's last remaining frontiers.</i>
+                        </p>
+                        <p>
+                            <i>Explorers come from across the globe, scheming and dreaming of planting their flag at the
+                                Pole.</i>
+                        </p>
+                        <p>
+                            <i>Every summer, a half dozen countries send massive expeditions, continuing a centuries-old search
+                                for the fabled Northwest Passage.</i>
+                        </p>
+                        <p>
+                            <i>Christian missionaries have begun to settle and proselytize the faith, inflaming tensions with
+                                the dozens of local Inuit nations. It seems conflict is inevitable...</i>
+                        </p>
+                        <p>
+                            <i>But why, exactly, are <strong>you</strong> here?</i>
+                        </p>
+                        <p>
+                            <i>Well, that's up to you to remember... or forget.</i>
+                        </p>
+                    </div>
+                </div>        
+                <br />
+                <div>
+                    <iframe src="https://store.steampowered.com/widget/2636310/" frameborder="0" width="800"
+                        height="190"></iframe>
+                </div>
+                <div>
+                    <p><a href="./gronland-presskit.html">Presskit</a></p>
+                </div>
+            </div>  
         </div>
     </div>
-
 </body>
 
 </html>
